2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: the observe method was
	modified to handle the new "caldav-acl-reset" notification. The
	code was also simplified by triggering a refresh whenever the
	mACLRefreshData ivar is set.
	Completed the webdav sync implementation by handling the case
	where a 403 error code would be return with a "valid-sync-token"
	DAV error.

2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/providers/composite/calCompositeCalendar.js: when
	calendars implement calISyncCalendar, we don't allow getItems
	operations on them as long as they are not "loaded".

	* src/calendar/base/src/calDavCalendar.js: bypass safeRefresh as
	long as the ACLs are not loaded (Inverse edition).

2009-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/agenda-listbox.js
	(deleteItemsFromCalendar): we cannot duplicate the array of nodes
	with Array.splice with Mozilla 1.8, therefore we wander the
	nodeList reversely.

2009-07-03  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Added patch for bug #453145

2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (safeRefresh): fixed
	issues with unavailable calendars. (#502014)

2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calIcsParser.js: added a new
	"sanitizeICSValue" that pre-parse the ICS string in order to fix
	errors that are not handled by libical.

	* src/calendar/base/src/calStorageCalendar.js (writeEvent): be
	tolerant for events which don't have a start or an end date.
	Replace them with an empty string.

	* src/calendar/base/src/calDavCalendar.js: webdav sync: do not try
	to delete items which are not present in the item id cache. Added
	new "finalizeUpdatedItems" with code executed when a safeRefresh
	is concluded. Call that new method from the
	getUpdatedItem_WebdavSync method too.
